# mpbt

./: .gitignore  .gitmodules  .prettierrc.js  LICENSE  README.md  babel.config.json  coi-serviceworker.js  eslint.config.mjs  jest.config.js  npm-shrinkwrap.json  package.json  webpack.config.js
.github/workflows/: build.yml  release-deploy.yml
libs/argon2/: CMakeLists.txt  argon2-nothreads.js  argon2.js  build.sh  clean.sh
src/: index.html
src/css/: style.css
src/js/: argon2.worker.js  combining.js  decryption.js  encodings.js  encodings.json  encryption.js  helpers.js  main.js  splitting.js
tests/: encodings.test.js
